opam-version: "2.0"
synopsis: "a combinator library for random generation"
tags: [ "random" "generator" "fuel" ]

homepage: "https://github.com/gasche/random-generator"
bug-reports: "https://github.com/gasche/random-generator/issues"
doc: [ "http://gasche.github.io/random-generator/doc/random-generator/Random_generator/index.html" ]
dev-repo: "git+https://github.com/gasche/random-generator.git"

maintainer: ["gabriel.scherer@gmail.com" "simon.cruanes@inria.fr"]
authors: ["Gabriel Scherer"]

license: "MIT"

depends: [
  "ocaml" {>= "4.02"}
  "dune" {>= "2.7"}
]

build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]

